<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ABILIDADE</string>
    <string name="detalles">Detalles</string>
    <string name="titulo">Título</string>
    <string name="tituloRequerido">Título (Requerido)</string>
    <string name="direccion">Dirección</string>
    <string name="acceder">Acceder</string>
    <string name="descripcion">Descripción</string>
    <string name="accediendo">Accediendo...</string>
    <string name="descargandoPuntos">Descargando puntos. Espere, por favor...</string>
    <string name="descargandoRutas">Descargando rutas accesibles. Espere, por favor...</string>
    <string name="cargandoEsperePorFavor">Cargando aplicación. Espere, por favor...</string>
    <string name="detallePuntoImagenPrincipal">Imagen principal del punto</string>
    <string name="direccionCorreo">Dirección de correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirmarPassword">Confirmar contraseña</string>
    <string name="olvidastePassword">¿Olvidaste la contraseña?</string>
    <string name="registrar">Registrar</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="descripcionOpcional">Descripción (opcional)</string>
    <string name="correoEOpcional">Correo electrónico (opcional)</string>
    <string name="registrarPunto">Registrar punto</string>
    <string name="rutasAccesibles">Rutas 100% accesibles</string>
    <string name="verImagenPrincipal">Ver imagen principal</string>
    <string name="verImagenAux1">Ver imagen auxiliar 1</string>
    <string name="verImagenAux2">Ver imagen auxiliar 2</string>
    <string name="ajustes">Ajustes</string>
    <string name="ayuda">Ayuda</string>
    <string name="agregarPunto">Agregar punto</string>
    <string name="imagenesPunto">Imágenes del punto</string>
    <string name="obteniendoDireccion">Obteniendo dirección. Espere...</string>
    <string name="usuarioDesconectado">Usuario desconectado con éxito</string>
    <string name="altaPuntoVerFoto">Ver foto</string>
    <string name="altaPuntoTomarFoto">Tomar foto</string>
    <string name="altaPuntoElegirGaleria"> Elegir de la galería</string>
    <string name="vistaSatelite">Vista Satélite</string>
    <string name="vistaMapa">Vista Mapa</string>
    <string name="altaPuntoSeleccioneOpcion">Seleccione una opción</string>
    <string name="altaPuntoFalloFotoTomada">Se produjo un fallo al cargar la foto tomada</string>
    <string name="altaPuntoValidacionTitulo">Debe introducir un título para el punto inaccesible</string>
    <string name="altaPuntoValidacionDireccion">Debe introducir la dirección del punto inaccesible</string>
    <string name="altaPuntoValidacionImagen">Debe tomar o elegir una foto como imagen principal del punto</string>
    <string name="altaPuntoSinImagen">Sin imagen asociada</string>
    <string name="altaPuntoFalloTomarFoto">No se puede tomar la foto. Compruebe su tarjeta SD externa</string>
    <string name="altaPuntoTrabajando">Trabajando...</string>
    <string name="altaPuntoRegistrandoPunto">Registrando punto inaccesible. Espere, por favor</string>
    <string name="altaPuntoRegistroExito">Punto inaccesible registrado con éxito</string>
    <string name="ubicacionRed">Obteniendo ubicación basada en red...</string>
    <string name="recomiendaUbicacion">Se recomienda activar el GPS o la ubicación basada en red \n
        							   para establecer la ubicación del usuario</string>
    <string name="providerUriNoSoportada">URI no soportada:</string>
    <string name="providerFalloInsercion">Se ha producido un fallo al insertar el registro en la Base de Datos</string>
    <string name="mapaActivityErrorCursor">Error al consultar la Base de Datos</string>
    <string name="mapaActivityCursorVacio">Base de datos vacía: no hay puntos que mostrar</string>
    <string name="detallePuntoDescripcion">Descripción: </string>
    <string name="falloUbicarUsuario">Fallo al ubicar al usuario</string>
    <string name="ubicacionNoEncontrada">Ubicación no encontrada</string>
    <string name="sinDescripcion">(Sin Descripción)</string>
    <string name="volver">Volver</string>
    <string name="ajustesUsuario">Ajustes de usuario</string>
    <string name="cerrarSesion">Cerrar sesión de usuario</string>
    <string name="errorDetallePunto">Error al recuperar los datos del punto inaccesible</string>
    <string name="noImagenesAux">Sin más imáganes asociadas</string>
    <string name="bienvenidaConexionInternet">Necesita conexión a internet para poder ejecutar la aplicación</string>
    <string name="ayudaAltaPuntoTitulo">- Título:</string>
    <string name="ayudaAltaPuntoDescrTitulo">Título del punto inaccesible. Se debe informar OBLIGATORIAMENTE</string>
    <string name="ayudaAltaPuntoDireccion">- Dirección:</string>
    <string name="ayudaAltaPuntoDescrDireccion">Dirección del punto. Se rellena automáticamente con la posición obtenida del terminal, aunque se puede modificar manualmente</string>
    <string name="ayudaAltaPuntoDescripcion">- Descripción:</string>
    <string name="ayudaAltaPuntoDescrDescripcion">Descripción del punto inaccesible. Es opcional, y puede servir para incluir más información como el nombre del edificio inaccesible, lugares próximos al punto inaccesible, etc.</string>
    <string name="ayudaAltaPuntoCorreoE">- Correo-e:</string>
    <string name="ayudaAltaPuntoDescrCorreoE">Dirección de correo electrónico del usuario que registra el punto. Se utilizará para mantener informado al usuario de las actuaciones sobre el punto, y en ningún caso se difundirá a terceros o se usará con otros fines.</string>
    <string name="ayudaAltaPuntoImagenes">- Imágenes del punto:</string>
    <string name="ayudaAltaPuntoDescrImagenes">Fotos tomadas sobre el punto inaccesible. Se pueden utilizar hasta tres imágenes: una imagen principal (OBLIGATORIA) y dos imágenes auxiliares</string>
    <string name="ayudaAltaPuntoImagenPrincipal">- Imagen principal:</string>
    <string name="ayudaAltaPuntoDescrImagenPrincipal">Imagen principal del punto. Al tocar sobre el icono se abrirá un cuadro con tres opciones que permitirán tomar una foto del punto con la cámara del móvil, seleccionar la foto de la galería o ver la foto que se ha seleccionado para el punto</string>
    <string name="ayudaAltaPuntoImagenesAux">- Imágenes auxiliares:</string>
    <string name="ayudaAltaPuntoDescrImagenesAux">Son hasta un máximo de dos fotos para describir con más detalle el punto inaccesible. Son opcionales, y cuentan con las mismas opciones que la imagen principal: tomar foto desde la cámara, elegir de la galería y ver foto.</string>
    <string name="elMapa">El Mapa</string>
    <string name="ayudaMapaDescrMapa">El mapa de Abilidade se ofrece gracias al servicio Google Maps de Google, y permite conocer con detalle cualquier punto de la geografía nacional o internacional.  \n
                                      En él se muestran gráficamente los puntos inaccesibles señalados con un punto de color, así como la posición del usuario representada mediante un marcador rojo.</string>
	<string name="indicadoresMapa">Indicadores en el mapa</string>
	<string name="indicadorMapaUsuario">Este indicador representa la posición del usuario en el mapa. Para que la posición sea más precisa se recomienda tener activado el sensor GPS del terminal a la hora de utilizar la aplicación. \n
	                                    Se puede conocer la dirección del usuario tocando sobre este indicador de posición</string>
	<string name="indicadorMapaPunto">Este indicador ubica un punto inaccesible en el mapa. Al tocar sobre él se muestra una ventana con el título del punto, dirección e imagen principal. Tocando sobre esta ventana se accede a la pantalla de detalle del punto inaccesible.</string>
	<string name="accederUsuarioBlanco">Introduzca dirección de correo electrónico</string>
	<string name="accederPasswordBlanco">Introduzca contraseña</string>
	<string name="accederConfirmarPasswordBlanco">Introduzca confirmación de contraseña</string>
	<string name="accederPasswordsNoCoinciden">Las contraseñas introducidas no coinciden</string>
	<string name="accederConfirmarUsuarioIncorrecto">La dirección de e-mail especificada no tiene un formato correcto</string>
	<string name="accederConfirmarLongPasswordMenor">La contraseña introducida es demasiado pequeña. Introduzca una con tamaño igual o superior a</string>
	<string name="accesoIncorrecto">Acceso incorrecto al servidor. Por favor, inténtelo de nuevo más tarde</string>
	<string name="accesoIncorrectoUsuario">Dirección de e-mail no registrada en ABILIDADE</string>
	<string name="accesoIncorrectoPassword">La contraseña no coincide para la dirección de e-mail indicada</string>
	<string name="accesoIncorrectoUsuarioNoActivo">Usuario no activo. Por favor, active su cuenta de usuario</string>
	<string name="accesoIncorrectoError">Error al validar usuario. Por favor, inténtelo de nuevo más tarde</string>
	<string name="altaIncorrectaError">Error al registrar el usuario. Por favor, inténtelo de nuevo más tarde</string>
	<string name="altaIncorrectaUsuarioExiste">El correo electrónico que intenta dar de alta ya existe en la aplicación</string>
	<string name="enviandoDatos">Enviando datos. Espere, por favor...</string>
	<string name="confirmarUsuario">Confirmar usuario</string>
	<string name="confirmarUsuarioTextoPlanoI">En breves momentos recibirá un correo electrónico de confirmación de usuario en la dirección de correo que indicó.</string>
	<string name="confirmarUsuarioTextoPlanoII">Pulse sobre el enlace que se adjunta en el correo para confirmar su registro de usuario en ABILIDADE.</string>
	<string name="confirmarUsuarioTextoPlanoIII">Si no encuentra el correo en su carpeta de Recibidos, revise su carpeta de correo no deseado.</string>
</resources>
