<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/grisFondoPantalla" 
    >
    <LinearLayout android:id="@+id/linearLayoutDetallePunto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dip"
        android:gravity="center_vertical"
    >

    	 <ImageView
    	     android:id="@+id/detallePuntoImagenPrincipalBm"
    	     android:contentDescription="@string/detallePuntoImagenPrincipal"
    	     android:layout_width="fill_parent"
    	     android:layout_height="80dip"
    	     android:layout_marginLeft="5dip"
    	     android:layout_marginTop="5dip"
    	     android:src="@drawable/icon" 
    	/>
    	<TextView android:id="@+id/detallePuntoTitulo"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/titulo"
    	    style="@style/detallePuntoTextoTitulo"
    	    android:layout_marginTop="10dip"
    	/>  
    	<TextView	android:id="@+id/detallePuntoDireccion"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/direccion"
    	    android:layout_marginTop="15dip"
    	    style="@style/detallePuntoTextoDireccion"
    	/>
    	<TextView	android:id="@+id/detallePuntoTextoDescripcion"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/descripcion"  
			style="@style/altaPuntoTextoPlano"
			android:layout_marginTop="15dip"
		/>
    	<TextView	android:id="@+id/detallePuntoDescripcion"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/detallePuntoDescripcion"
	        style="@style/detallePuntoTextoDescripcion"
	        android:layout_marginTop="8dip"
	    />
    	<TextView	android:id="@+id/detallePuntoTextoImagenes"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/imagenesPunto"  
			style="@style/altaPuntoTextoPlano"
			android:layout_marginTop="15dip"
	    />	
    	<TextView	android:id="@+id/detallePuntoImagenPrincipal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/verImagenPrincipal"  
			style="@style/detallePuntoTextoEnlaceImagen"
			android:layout_marginTop="8dip"
	    />
    	<TextView	android:id="@+id/detallePuntoImagenAux1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/verImagenAux1"  
			style="@style/detallePuntoTextoEnlaceImagen"
			android:layout_marginTop="8dip"
	    />
    	<TextView	android:id="@+id/detallePuntoImagenAux2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/verImagenAux2"  
			style="@style/detallePuntoTextoEnlaceImagen"
			android:layout_marginTop="8dip"
	    />
    </LinearLayout>   
    <Button
      android:id="@+id/detallePuntoBotonVolver"
      android:layout_width="fill_parent"
      android:layout_height="40dip"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="5dip"
      android:layout_marginLeft="5dip"
      android:layout_marginRight="5dip"
      android:text="@string/volver"
      android:gravity="center"
      android:background="@drawable/button_selector"
      style="@style/buttonTextStyle"
    />
</RelativeLayout>