<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grisFondoPantalla"
    >
    <LinearLayout	android:id="@+id/bottom_view"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="5dip"
		>
        <Button	android:id="@+id/ayudaAltaPuntoBotonVolver"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/volver"
	     />
   </LinearLayout>
   <ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:dividerHeight="4dip"
		android:divider="@android:color/transparent"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginTop="5dip"
    	android:layout_above="@id/bottom_view"
    >
       <RelativeLayout
       	  android:layout_width="fill_parent"
	   	  android:layout_height="wrap_content"
	   	  android:orientation="vertical"
       >
          <TextView	android:id="@+id/ayudaAltaPuntoTextoDetalles"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/detalles"  
			style="@style/altaPuntoTextoPlano"
			android:layout_marginTop="5dip"
  		  />        
  		  <TextView	android:id="@+id/ayudaAltaPuntoTitulo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoTitulo"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoTextoDetalles"
  		  />
  		  <TextView	android:id="@+id/ayudaAltaPuntoDescrTitulo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescrTitulo"  
			style="@style/ayudaAltaPuntoTextoDescripcion"
			android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip"
			android:layout_toRightOf="@id/ayudaAltaPuntoTitulo"
			android:layout_below="@id/ayudaAltaPuntoTextoDetalles"
  		  />
  		  <TextView android:id="@+id/ayudaAltaPuntoDireccion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDireccion"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoDescrTitulo" 
  		  />
  		  <TextView	android:id="@+id/ayudaAltaPuntoDescrDireccion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescrDireccion"  
			style="@style/ayudaAltaPuntoTextoDescripcion"
			android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip"
			android:layout_toRightOf="@id/ayudaAltaPuntoDireccion"
			android:layout_below="@id/ayudaAltaPuntoDescrTitulo"
  		  />
  		  <TextView android:id="@+id/ayudaAltaPuntoDescripcion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescripcion"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoDescrDireccion" 
  		  />
  		  <TextView	android:id="@+id/ayudaAltaPuntoDescrDescripcion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescrDescripcion"  
			style="@style/ayudaAltaPuntoTextoDescripcion"
			android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip"
			android:layout_toRightOf="@id/ayudaAltaPuntoDescripcion"
			android:layout_below="@id/ayudaAltaPuntoDescrDireccion"
  		  />
  		  <TextView android:id="@+id/ayudaAltaPuntoCorreoE"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoCorreoE"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoDescrDescripcion" 
  		  />

  		  <TextView
  		      android:id="@+id/ayudaAltaPuntoDescrCorreoE"
  		      style="@style/ayudaAltaPuntoTextoDescripcion"
  		      android:layout_width="wrap_content"
  		      android:layout_height="fill_parent"
  		      android:layout_below="@id/ayudaAltaPuntoDescrDescripcion"
  		      android:layout_marginLeft="5dip"
  		      android:layout_marginTop="5dip"
  		      android:layout_toRightOf="@id/ayudaAltaPuntoCorreoE"
  		      android:text="@string/ayudaAltaPuntoDescrCorreoE" />

  		  <TextView	android:id="@+id/ayudaAltaPuntoTextoImagenes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/imagenesPunto"  
			style="@style/altaPuntoTextoPlano"
			android:layout_marginTop="8dip"
			android:layout_below="@id/ayudaAltaPuntoDescrCorreoE"
  		  />
  		  <TextView android:id="@+id/ayudaAltaPuntoImagenes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoImagenes"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoTextoImagenes" 
  		  />
  		  <TextView	android:id="@+id/ayudaAltaPuntoDescrImagenes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescrImagenes"  
			style="@style/ayudaAltaPuntoTextoDescripcion"
			android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip"
			android:layout_toRightOf="@id/ayudaAltaPuntoImagenes"
			android:layout_below="@id/ayudaAltaPuntoTextoImagenes"
  		  />
  		  <ImageView	android:id="@+id/ayudaAltaPuntoCapturaImagenes"
  		      android:layout_width="180dip"
  		      android:layout_height="120dip"
  		      android:src="@drawable/captura_alta_punto_imagenes"
  		      android:layout_below="@id/ayudaAltaPuntoDescrImagenes"
  		      android:layout_marginTop="5dip"
  		      android:layout_centerHorizontal="true"
  		  />
  		  <TextView android:id="@+id/ayudaAltaPuntoImagenPrincipal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoImagenPrincipal"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoCapturaImagenes" 
  		  />
  		  <TextView	android:id="@+id/ayudaAltaPuntoDescrImagenPrincipal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescrImagenPrincipal"  
			style="@style/ayudaAltaPuntoTextoDescripcion"
			android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip"
			android:layout_toRightOf="@id/ayudaAltaPuntoImagenPrincipal"
			android:layout_below="@id/ayudaAltaPuntoCapturaImagenes"
  		  />
  		  <ImageView	android:id="@+id/ayudaAltaPuntoCapturaOpcionesImagen"
  		      android:layout_width="160dip"
  		      android:layout_height="160dip"
  		      android:src="@drawable/captura_alta_punto_opciones_imagen"
  		      android:layout_below="@id/ayudaAltaPuntoDescrImagenPrincipal"
  		      android:layout_marginTop="5dip"
  		      android:layout_centerHorizontal="true"
  		  />
  		  <TextView android:id="@+id/ayudaAltaPuntoImagenesAux"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoImagenesAux"  
			style="@style/ayudaAltaPuntoTextoCabecera"
			android:layout_marginTop="5dip"
			android:layout_below="@id/ayudaAltaPuntoCapturaOpcionesImagen" 
  		  />
  		  <TextView	android:id="@+id/ayudaAltaPuntoDescrImagenesAux"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ayudaAltaPuntoDescrImagenesAux"  
			style="@style/ayudaAltaPuntoTextoDescripcion"
			android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip"
			android:layout_toRightOf="@id/ayudaAltaPuntoImagenesAux"
			android:layout_below="@id/ayudaAltaPuntoCapturaOpcionesImagen"
  		  />
       </RelativeLayout>
   </ScrollView>
     
</RelativeLayout>