<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout	xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/azulFondoPantalla"
  android:paddingLeft="4dip"
  android:paddingRight="4dip"
  >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
  >
      <TextView android:id="@+id/crearCuentaTextoCrearCuenta"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/crearCuenta"
			android:layout_gravity="center_horizontal"
			style="@style/loginTextoAcceder"
			android:layout_marginTop="10dip"
      /> 
      <EditText	android:id="@+id/crearCuentaTextoEmail"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:inputType="textEmailAddress"
		  	android:hint="@string/direccionCorreo"
		  	android:maxLength="100"
		  	android:layout_marginTop="40dip"
	   />
       <EditText	android:id="@+id/crearCuentaTextoPassword"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:inputType="textPassword"
		  	android:hint="@string/password"
		  	android:maxLength="100"
		  	android:layout_marginTop="10dip"
	   />
       <EditText	android:id="@+id/crearCuentaTextoConfirmarPassword"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:inputType="textPassword"
		  	android:hint="@string/confirmarPassword"
		  	android:maxLength="100"
		  	android:layout_marginTop="10dip"
	   />
	   <Button android:id="@+id/crearCuentaBotonRegistrar"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:layout_marginTop="15dip"
	        android:text="@string/registrar"
	        android:gravity="center"
	        android:background="@drawable/button_selector"
	        style="@style/buttonTextStyle"
	  	/> 
  </LinearLayout>

  <Button android:id="@+id/crearCuentaBotonVolver"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      style="@style/buttonTextStyle"
      android:layout_width="140dip"
      android:layout_height="35dip"
      android:layout_marginBottom="5dip"
      android:background="@drawable/button_selector"
      android:gravity="center"
      android:text="@string/volver" 
  />

</RelativeLayout>