<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout	xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/grisFondoPantalla"
  android:paddingLeft="4dip"
  android:paddingRight="4dip"
  >
  <ScrollView android:id="@+id/ScrollView001AltaPunto"
    android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" 
  >
      <LinearLayout 
          android:id="@+id/LinerLayout001AltaPunto"
          android:orientation="vertical"
  	      android:layout_width="fill_parent"
	   	  android:layout_height="wrap_content" 
      >
          <TextView	android:id="@+id/altaPuntoTextoDetalles"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/detalles"  
			style="@style/altaPuntoTextoPlano"
			android:layout_marginTop="5dip"
		  />
		  <EditText	android:id="@+id/altaPuntoTitulo"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:inputType="textCapSentences"
		  	android:hint="@string/tituloRequerido"
		  	android:maxLength="40"
		  	android:layout_marginTop="4dip"
		  />
		  <EditText	android:id="@+id/altaPuntoDireccion"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:inputType="textCapSentences"
		  	android:hint="@string/obteniendoDireccion"
		  	android:enabled="false"
		  	android:maxLength="100"
		  	android:layout_marginTop="4dip"
		  />
		  <EditText	android:id="@+id/altaPuntoDescripcion"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:inputType="textCapSentences"
		  	android:hint="@string/descripcionOpcional"
		  	android:maxLength="140"
		  	android:layout_marginTop="4dip"
		  />
		  <TextView	android:id="@+id/altaPuntoTextoImagenes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/imagenesPunto"  
			style="@style/altaPuntoTextoPlano"
			android:layout_marginTop="5dip"
			android:layout_below="@id/altaPuntoDescripcion"
		  />
		  <RelativeLayout android:id="@+id/RelativeLayout001AltaPunto"
		       android:orientation="vertical"
  			   android:layout_width="fill_parent"
  			   android:layout_height="wrap_content"
		  >
		  	<ImageView android:id="@+id/altaPuntoImagenPrincipal"
		  	android:layout_width="150dip"
		  	android:layout_height="150dip"
		  	android:src="@drawable/foto_punto"
		  	android:layout_marginTop="5dip"
		  />
		  <ImageView android:id="@+id/altaPuntoImagenAux1"
		  	android:layout_width="75dip"
		  	android:layout_height="75dip"
		  	android:src="@drawable/foto_punto"
		  	android:layout_marginTop="5dip"
			android:layout_below="@id/altaPuntoTextoImagenes"
			android:layout_alignBottom="@id/altaPuntoImagenPrincipal"
			android:layout_toRightOf="@id/altaPuntoImagenPrincipal"
			android:paddingLeft="5dip"
		  />
		  <ImageView android:id="@+id/altaPuntoImagenAux2"
		  	android:layout_width="75dip"
		  	android:layout_height="75dip"
		  	android:src="@drawable/foto_punto"
		  	android:layout_marginTop="5dip"
			android:layout_below="@id/altaPuntoTextoImagenes"
			android:layout_alignBottom="@id/altaPuntoImagenPrincipal"
			android:layout_toRightOf="@id/altaPuntoImagenAux1"
			android:paddingLeft="5dip"
		  />
		  </RelativeLayout>
		  <Button
	      android:id="@+id/altaPuntoBotonAgregar"
	      android:layout_width="fill_parent"
	      android:layout_height="40dip"
	      android:layout_marginBottom="5dip"
	      android:layout_marginTop="15dip"
	      android:text="@string/agregarPunto"
	      android:gravity="center"
	      android:background="@drawable/button_selector"
	      style="@style/buttonTextStyle"
	  	/>
      </LinearLayout>
  </ScrollView>
</RelativeLayout>