<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grisFondoPantalla"
    >
    <LinearLayout	android:id="@+id/bottom_view"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="5dip"
		>
        <Button	android:id="@+id/ayudaMapaBotonVolver"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/volver"
	     />
   </LinearLayout>
   <ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:dividerHeight="4dip"
		android:divider="@android:color/transparent"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginTop="5dip"
    	android:layout_above="@id/bottom_view"
    >
       <RelativeLayout
       	  android:layout_width="fill_parent"
	   	  android:layout_height="wrap_content"
	   	  android:orientation="vertical"
       >
          <TextView	android:id="@+id/ayudaMapaTextoMapa"
              android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/elMapa"  
			  style="@style/altaPuntoTextoPlano"
			  android:layout_marginTop="5dip" 
          />
          <TextView	android:id="@+id/ayudaMapaDescrMapa"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/ayudaMapaDescrMapa"  
			  style="@style/ayudaAltaPuntoTextoDescripcion"
			  android:layout_marginTop="5dip"
			  android:layout_marginLeft="5dip"
			  android:layout_below="@id/ayudaMapaTextoMapa"
  		  />
          <TextView	android:id="@+id/ayudaMapaTextoIndicadoresMapa"
              android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/indicadoresMapa"  
			  style="@style/altaPuntoTextoPlano"
			  android:layout_marginTop="5dip" 
			  android:layout_below="@id/ayudaMapaDescrMapa"
          />
          <ImageView	android:id="@+id/ayudaMapaImagenIndicadorUsuario"
          	  android:layout_height="wrap_content"
          	  android:layout_width="wrap_content"
          	  android:src="@drawable/indicador_mapa_pos_usuario"
          	  android:layout_marginTop="5dip" 
			  android:layout_below="@id/ayudaMapaTextoIndicadoresMapa"
          />
          <TextView	android:id="@+id/ayudaMapaIndicadorUsuario"
              android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/indicadorMapaUsuario"  
			  style="@style/ayudaAltaPuntoTextoDescripcion"
			  android:layout_marginTop="5dip"
			  android:layout_marginLeft="8dip"
			  android:layout_below="@id/ayudaMapaTextoIndicadoresMapa"
			  android:layout_toRightOf="@id/ayudaMapaImagenIndicadorUsuario"
		  />
          <ImageView	android:id="@+id/ayudaMapaImagenIndicadorPunto"
          	  android:layout_height="wrap_content"
          	  android:layout_width="wrap_content"
          	  android:src="@drawable/indicador_mapa_punto"
          	  android:layout_marginTop="5dip" 
			  android:layout_below="@id/ayudaMapaIndicadorUsuario"
          />
          <TextView	android:id="@+id/ayudaMapaIndicadorPunto"
              android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/indicadorMapaPunto"  
			  style="@style/ayudaAltaPuntoTextoDescripcion"
			  android:layout_marginTop="5dip"
			  android:layout_marginLeft="8dip"
			  android:layout_below="@id/ayudaMapaIndicadorUsuario"
			  android:layout_toRightOf="@id/ayudaMapaImagenIndicadorPunto"
		  />
          <ImageView	android:id="@+id/ayudaMapaImagenVentanaPunto"
          	  android:layout_height="wrap_content"
          	  android:layout_width="wrap_content"
          	  android:src="@drawable/ventana_punto"
          	  android:layout_marginTop="5dip" 
			  android:layout_below="@id/ayudaMapaIndicadorPunto"
			  android:layout_centerHorizontal="true"
          />
       </RelativeLayout>
   </ScrollView>
</RelativeLayout>